fix event view size on mobiles; fix header peep toes

--- a/src/sass/_areaView.scss
+++ b/src/sass/_areaView.scss
@@ -10,6 +10,7 @@
 	justify-content: space-between;
 	color: $white_alpha;
 	box-shadow: 0px 0px 2px #000;
+	background-color: $gray95;	
 
 	.herz {
 		display: flex;
