--- a/src/sass/_eventView.scss
+++ b/src/sass/_eventView.scss
@@ -18,7 +18,6 @@
 				box-shadow: 0px 2px 5px #000;
 		}
 
-
 		.section-header {
 				text-align: center;
 				position: relative;
@@ -53,6 +52,7 @@
 						padding: .3rem;
 						cursor: pointer;
 						transition: background 200ms;
+						text-align: center;
 
 						&.active, &:hover {
 								background-color: $gray20;
@@ -82,8 +82,7 @@
 }
 
 .mobile {
+	#eventView {
 		width: 100%;
-}
-
-.tablet {
+	}
 }
